--- a/packages/next/src/components/TitleLogo/styles.module.scss
+++ b/packages/next/src/components/TitleLogo/styles.module.scss
@@ -1,63 +1,68 @@
 @use 'src/styles/variables';
 
 .container {
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-  max-width: 100%;
-  width: max-content;
-  border-radius: 8rem;
-  padding: 0.25rem 3rem 0.25rem 1rem;
-  background-color: rgb(var(--primary-color));
-  margin-bottom: 2rem;
+  min-height: 14rem;
 
-  img {
-    user-select: none;
-  }
-
-  .title {
-    font-size: 5.25em;
-    font-weight: 100;
-    letter-spacing: 0.1rem;
-    text-align: center;
-    color: rgb(var(--on-primary-color));
-    margin: 2rem 0;
-    overflow: hidden;
-  }
-
-  @media screen and (min-width: variables.$breakpoint-sm) {
-    opacity: 0;
-    padding: 0.25rem;
-    gap: 0;
-    animation:
-      fade-in 2s cubic-bezier(0.4, 0, 0.2, 1) forwards,
-      title-enter-background 2s cubic-bezier(0.4, 0, 0.2, 1) 500ms forwards;
-
-    .title {
-      opacity: 0;
-      max-width: 0;
-      margin: 0;
-      animation: title-enter 2s cubic-bezier(0.4, 0, 0.2, 1) 500ms forwards;
-    }
-  }
-
-  @media screen and (max-width: variables.$breakpoint-sm) {
-    flex-direction: column;
-    gap: 1rem;
-    background-color: transparent;
-    justify-content: center;
-    padding: 0;
-    margin: 0;
+  .background {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    max-width: 100%;
+    width: max-content;
+    border-radius: 8rem;
+    padding: 0.25rem 3rem 0.25rem 1rem;
+    background-color: rgb(var(--primary-color));
+    margin-bottom: 2rem;
 
     img {
-      opacity: 0;
-      animation: fade-in 2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+      user-select: none;
     }
 
     .title {
-      color: rgb(var(--on-background-color));
-      margin-top: 0;
+      font-size: 5.25em;
+      font-weight: 100;
+      letter-spacing: 0.1rem;
+      text-align: center;
+      color: rgb(var(--on-primary-color));
+      margin: 2rem 0;
+      overflow: hidden;
+    }
+
+    @media screen and (min-width: variables.$breakpoint-sm) {
+      opacity: 0;
+      padding: 0.25rem;
+      gap: 0;
+      margin-bottom: 0;
+      animation:
+        fade-in 2s cubic-bezier(0.4, 0, 0.2, 1) forwards,
+        title-enter-background 2s cubic-bezier(0.4, 0, 0.2, 1) 500ms forwards;
+
+      .title {
+        opacity: 0;
+        max-width: 0;
+        margin: 0;
+        animation: title-enter 2s cubic-bezier(0.4, 0, 0.2, 1) 500ms forwards;
+      }
+    }
+
+    @media screen and (max-width: variables.$breakpoint-sm) {
+      flex-direction: column;
+      gap: 1rem;
+      background-color: transparent;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
+
+      img {
+        opacity: 0;
+        animation: fade-in 2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+      }
+
+      .title {
+        color: rgb(var(--on-background-color));
+        margin-top: 0;
+      }
     }
   }
 }
